# simple-clients-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
src/simple_clients_api/: asgi.py  manage.py  urls.py  wsgi.py
src/simple_clients_api/core/: admin.py  apps.py
src/simple_clients_api/core/migrations/: 0001_initial.py  0002_alter_clientwithspouse_managers_and_more.py
src/simple_clients_api/core/models/: __init__.py  address.py  base.py  child.py  client.py  communication.py  document.py  job.py  passport.py
src/simple_clients_api/core/serializers/: __init__.py  address.py  base.py  child.py  client.py  communication.py  document.py  job.py  passport.py
src/simple_clients_api/core/views/: clients.py
src/simple_clients_api/settings/: local.py
src/simple_clients_api/utils/: exceptions_handler.py  models.py  serializers.py
