[tool.poetry]
name = "simple-clients-api"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_clients_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
djangorestframework-jsonapi = "^6.1.0"
django-filter = "^23.5"
django-extensions = "^3.2.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
